update layout and java String note

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -2,7 +2,7 @@
 # General Site Settings
 title: ywjxx
 # logo: logo.jpg # You can add own logo.
-description: Xiang Xu and Wanjun Blog
+description: Xiang Xu's Blog
 
 
 #-------------------------------
