--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 #-------------------------------
 # General Site Settings
-title: ywjxx
+title: YwjXx Blog
 # logo: logo.jpg # You can add own logo.
 description: Xiang Xu's Blog
 
