--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -29,7 +29,7 @@ linkedin: https://www.linkedin.com/in/xiang-xu-2a106271/
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: Xiang Xu # add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
