--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,8 +11,9 @@ author:
   name: Xiang Xu
   image: profile.jpeg
   say-hello: Hello I'm <strong>Xiang Xu</strong>
-  bio: Come from 🇨🇳  and living in 🇮🇪  at moment <br/>
+  bio: Come from China 🇨🇳 and living in Ireland 🇮🇪 at moment <br/>
        Software Engineer 👨‍💻 <br/>
+       I like technology 💻 , sports 🏀 , travelling 🧳  and photography 📷 
       
 
 
