add google analytics

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -41,7 +41,7 @@ instagram-profile: xiangxu_ # Add instagram username
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: UA-178905804-1 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
